--- a/README
+++ b/README
@@ -147,7 +147,7 @@ yay -S optimus-manager optimus-manager-qt
 yay -S pamac polkit
 
 # Install important packages
-yay -S visual-studio-code-bin gimp rawtherapee darktable libreoffice-fresh gedit vlc telegram-desktop gpart mtools f2fs-tools ntfs-3g exfatprogs udftools jdk-openjdk grub-customizer numix-gtk-theme gvfs-smb gvfs-mtp libmtp android-udev android-tools mate-calc google-chrome skype spotify discord neofetch
+yay -S ranger visual-studio-code-bin gimp rawtherapee darktable libreoffice-fresh gedit vlc telegram-desktop gpart mtools f2fs-tools ntfs-3g exfatprogs udftools jdk-openjdk grub-customizer numix-gtk-theme gvfs-smb gvfs-mtp libmtp android-udev android-tools mate-calc google-chrome skype spotify discord neofetch
 
 # Install gnome screenshot tool
 yay -S gnome-screenshot
@@ -177,5 +177,8 @@ yay -S timeshift cron
 
 # Gaming on LINUX
 yay -S lutris steam wine-staging giflib lib32-giflib libpng lib32-libpng libldap lib32-libldap gnutls lib32-gnutls mpg123 lib32-mpg123 openal lib32-openal v4l-utils lib32-v4l-utils libpulse lib32-libpulse libgpg-error lib32-libgpg-error alsa-plugins lib32-alsa-plugins alsa-lib lib32-alsa-lib libjpeg-turbo lib32-libjpeg-turbo sqlite lib32-sqlite libxcomposite lib32-libxcomposite libxinerama lib32-libgcrypt libgcrypt lib32-libxinerama ncurses lib32-ncurses opencl-icd-loader lib32-opencl-icd-loader libxslt lib32-libxslt libva lib32-libva gtk3 lib32-gtk3 gst-plugins-base-libs lib32-gst-plugins-base-libs vulkan-icd-loader lib32-vulkan-icd-loader 
+
+# FPS Monitoring in games
+yay -S mangohud-git lib32-mangohud-git goverlay-bin
 
 ##### Complete #####
